[package]
name = "flowrunner"
version = "0.1.0"
authors = ["thanhnguyen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "flowrunner"
path = "src/main.rs"

[profile.dev]
split-debuginfo = "unpacked" # Faster debug builds on macOS

# CI-based builds use full release optimization.  See scripts/environment/release-flags.sh.
# This results in roughly a 5% reduction in performance when compiling locally vs when
# compiled via the CI pipeline.
[profile.release]
debug = false # Do not include debug symbols in the executable.

[profile.bench]
debug = true

[workspace]
members = [
  ".",
  "plugins/shell"
]

#[lib]
#crate-type = ["dylib", "rlib"]

[dependencies]

# Command
clap = "2.33.3"

# Dynamic library
dlopen = "0.1"
dlopen_derive = "0.1"

# Error
anyhow = { version = "1.0" }

# Directory / File
glob = "0.3"

# Log
log = "0.4"
env_logger = "0.8"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.14"
