[package]
name = "flowrunner"
version = "1.0.0"
authors = ["Thanh NGUYEN <thanh@uthng.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "flowrunner"
path = "src/main.rs"

[profile.dev]
split-debuginfo = "unpacked" # Faster debug builds on macOS

# CI-based builds use full release optimization.  See scripts/environment/release-flags.sh.
# This results in roughly a 5% reduction in performance when compiling locally vs when
# compiled via the CI pipeline.
[profile.release]
strip = true # Do not include debug symbols in the executable.
opt-level = "z"
lto = true
codegen-units = 1

[profile.bench]
debug = true

[workspace]
members = [
  ".",
  "json-ops",
  "plugins/builtin-shell",
  "plugins/builtin-kafka-consumer",
  "plugins/builtin-uri",
  "plugins/builtin-pgql-sqlx",
  "plugins/builtin-kafka-producer",
  "plugins/builtin-json-patch",
  "plugins/builtin-datastore",
  "plugins/builtin-webhook",
  "plugins/builtin-pgql-tokio",
  "plugins/builtin-httpserver",
  "plugins/builtin-dnsquery",
  "plugins/builtin-git",
  "plugins/builtin-template-tera",
  "plugins/builtin-lineinfile"
]

#[lib]
#crate-type = ["dylib", "rlib"]

[build-dependencies]
bindgen = "0.59"
#clang-sys = "1.3.1"


[dependencies]
# Command
clap = "2.33.3"

# async/await
tokio = { version = "1.19", features = ["full"] }
async-trait = "0.1"
async-channel = "1"
futures = "0.3"

# Lazy static
#once_cell = "0.1"
lazy_static = "1.4.0"

# Dynamic library
dlopen = "0.1"
dlopen_derive = "0.1"

# Error
anyhow = { version = "1.0" }

# Directory / File
glob = "0.3"

# Log
log = "0.4"
env_logger = "0.8"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.14"

# Template
tera = { version = "1", features = ["default"] }

# Env
envmnt = "0.9"

# Kafka
rdkafka = { version = "0.28", features = ["default", "cmake-build", "ssl"] }

# Postgres
sqlx = { version = "0.5.1", features = [ "postgres", "runtime-tokio-rustls", "tls", "all-types" ] }
tokio-postgres = { version = "0.7", features = [ "runtime", "with-time-0_3", "with-chrono-0_4", "with-serde_json-1", "with-eui48-1", "with-bit-vec-0_6", "with-uuid-0_8" ] }
postgres-openssl = "0.5"

# Json manipulation
json_ops = { path = "json-ops" }

# Date time
chrono = "0.4"

# Eval
evalexpr = "7"

# DB
# Error compilation on MacOs with lz4 and bzip2
rocksdb = { version = "0.18", default-features = false, features = ["serde", "zstd", "zlib", "snappy"] }
openssl = { version = "0.10", features = ["vendored"] }

# Moka cache
moka = { version = "0.8", features = ["future"] }
futures-util = "0.3"

# sys-info
sys-info = "0.9"

# Axum
axum = "0.4"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }

# Request
reqwest = "0.11"

# UUID
uuid = { version = "0.8", features = ["default", "v4"] }

# Trust DNS
trust-dns-client = "*"

# Cronjob
tokio-cron-scheduler = "0.7"
