[package]
name = "builtin-git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

flowrunner = { path = "../../" }
json_ops = { path = "../../json-ops" }

# Async/await
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
async-channel = "1"

# Error
anyhow = { version = "1.0" }

# Log
log = "0.4"
env_logger = "0.8"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Git
git2 = "0.13"

# Openssl
openssl = { version = "0.10", features = ["vendored"] }

# Eval
evalexpr = "7"

[lib]
crate-type = ["dylib"]
