[package]
name = "builtin-kafka-consumer"
version = "0.1.0"
authors = ["Thanh NGUYEN <thanh@uthng.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

flowrunner = { path = "../../" }
json_ops = { path = "../../json-ops" }

# Async/await
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
async-channel = "1"

# Error
anyhow = { version = "1.0" }

# Log
log = "0.4"
env_logger = "0.8"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Kafka
rdkafka = { version = "0.28", features = ["default"] }

[lib]
crate-type = ["dylib"]
