[package]
name = "builtin-pgql-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

flowrunner = { path = "../../" }
json_ops = { path = "../../json-ops" }

# Async/await
tokio = { version = "1.19", features = ["full"] }
async-trait = "0.1"
async-channel = "1"

# Error
anyhow = { version = "1.0" }

# Log
log = "0.4"
env_logger = "0.8"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQL
sqlx = { version = "0.5.1", features = [ "postgres", "runtime-tokio-rustls", "tls", "all-types" ] }
chrono = "0.4"
ipnetwork = "0.18"
uuid = "0.8"
mac_address = "1"

# Eval
evalexpr = "7"

# SqlParser
#sqlparser = "0.13"

# Regex
regex = "1.5.6"

[lib]
crate-type = ["dylib"]
