[package]
name = "builtin-shell"
version = "0.1.0"
authors = ["Thanh NGUYEN <thanh@uthng.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

flowrunner = { path = "../../" }
json_ops = { path = "../../json-ops" }

# Async/await
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
async-channel = "1"

# Error
anyhow = { version = "1.0" }

# Log
log = "0.4"
env_logger = "0.8"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["dylib"]
